# MindSploit

./: .cursor-rules.yaml  .gitignore  CMakeLists.txt  DATA_STORAGE_GUIDE.md  DEVELOPMENT_PLAN.md  LICENSE  Makefile.Debug  Makefile.Release  MindSploit.pro  PACKAGING_GUIDE.md  PROJECT_STRUCTURE.md  README.md  Update_log.md  build.bat  clean.bat  content.md  create_installer.bat  installer.nsi  package.bat  test_modules.bat  test_run.bat
.cursor/rules/: mindsploit-rules.mdc
docs/: AI_INTERACTION_DESIGN.md  COMMAND_SYSTEM_DESIGN.md  MODULE_DESIGN.md  NEW_DEVELOPMENT_PLAN.md  ROADMAP.md
src/: main.cpp
src/ai/: ai_manager.cpp  ai_manager.h
src/core/: async_executor.h  command.cpp  command.h  command_builder.h  command_parser.cpp  command_parser.h  config_manager.cpp  config_manager.h  database.cpp  database.h  engine_manager.cpp  engine_manager.h  module_interface.cpp  module_interface.h  module_manager.cpp  module_manager.h  session_manager.cpp  session_manager.h  terminal_interface.cpp  terminal_interface.h  tool_manager.h
src/engines/: engine_interface.h
src/engines/network/: network_engine.cpp  network_engine.h
src/gui/: mainwindow.cpp  mainwindow.h  terminal_widget.cpp  terminal_widget.h
src/modules/: nmap_module.cpp  nmap_module.h
src/modules/curl/: curl_module.cpp  curl_module.h
src/modules/metasploit/: metasploit_module.h
src/modules/nmap/: nmap_module.cpp  nmap_module.h
src/modules/portscan/: portscan_module.cpp  portscan_module.h
src/modules/scanners/: high_speed_scanner.h
src/modules/searchsploit/: searchsploit_module.cpp  searchsploit_module.h
src/modules/web/: web_scanner_base.h
src/utils/: network_utils.cpp  network_utils.h  process.cpp  process.h
tests/: test_main.cpp  test_storage.cpp
